--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,3 +6,12 @@ html {
   scroll-snap-type: y mandatory;
   scroll-padding-top: var(--page-header-height);
 }
+
+/* temporary hack for quiz questions */
+.choices {
+  margin-top: 0 !important;
+}
+.choice span p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
